Revert "Fix too high search area background"
This reverts commit 0ec81f6a80f57dc513c451a7cffa772774066f0c.

--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -775,7 +775,7 @@ nav.top-links li:hover a {
 #search {
   margin: 0 auto 20px auto;
   background-color: #366fa7;
-  height: 55px;
+  height: 65px;
   padding-top: 11px;
   position: relative;
 }
